Changelog
=========

0.1 (unreleased)
----------------

* use `index` instead of `template` for info viewlet to allow overriding the 
  template with zcml registrations (sync approach with that used in 
  p.a.iterate)
  [cewing]

* Fix a problem with the implementation of dexterity support at plone.app.linkintegrity,
  when this behavior is used with plone.app.referenceablebehavior the delete_confirmation form
  was failing because the object than is being deleted doesn't have an intid.
  With this patch the get_relations method simply returns an empty list in this case.
  [jpgimenez]

0.1b4 (2012-08-20)
------------------

* Do not display locked message to anonymous users
  [mattvoss]

* Copy annotations from working copy to baseline checkin.
  [frapell, jone]

* Fix KeyError when accessing previously checked in content through Acquisition
  wrapper
  http://code.google.com/p/dexterity/issues/detail?id=270
  [anthonygerrard]

* Hide the 'locked' status message if user is anonymous
  [mattvoss]

0.1b3 (2011-09-24)
------------------

* Make sure that changes to the subjects field are carried over when the
  working copy is checked in.
  [swampmonkey]

* Fix broken dependency declaration.
  [danjacka, jonstahl]

0.1b2 (2011-06-16)
------------------

* Declare plone.app.versioningbehavior and plone.app.referenceablebehavior
  as test dependencies.
  [danjacka, davisagli]

* Declare the implicit dependency on plone.app.relationfield.
  [davisagli]

0.1b1 (2011-05-20)
------------------

* Add functional tests.
  [anthonygerrard, davisagli]

0.1a2 (2011-01-25)
------------------

* Fixed to avoid try setting values on read-only fields.
  [deo]

* Improved documentation and usage information.
  [deo]


0.1a1 (2011-01-24)
------------------

* Renamed package to plone.app.stagingbehavior.
  [deo]

* Made sure to fire an IAfterCheckinEvent so that the iterate
  locking handler (handleCheckin) removes the lock from the
  baseline object.
  [deo]
