@@ -1,3 +1,4 @@
+from zope.interface import Interface
 from zope.interface import Attribute
 from z3c.relationfield.interfaces import IRelationValue
 
@@ -14,3 +15,10 @@ class IStagingRelationValue(IRelationValue):
     """
     """
     staging_properties = Attribute('Staging information')
+
+
+class IWCAnnotator(Interface):
+    """Working copy relation annotator.
+    This adapter stores StagingRelationValue in IBaseline object
+    in order to prevent to lose working copy relation when
+    IBaseLine is changed"""
